--- a/views/main.ejs
+++ b/views/main.ejs
@@ -17,7 +17,7 @@
 <body>
 
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-primary bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-primary ">
         <div class="search">
             <form action="/search" method="POST" class="searchBox">
                 <input type="text" placeholder="Search...">
