--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,8 +15,40 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a href="index.html" class="navbar-brand">Brand Name</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-    <div class="container">
+
+        <div class="collapse navbar-collapse" id="navbarContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <button class="btn dropdown-toggle btn-primary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Profile
+                    </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="signup">New User</a>
+                            <a class="dropdown-item" href="login">Login</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="">Journal</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container-fluid signing">
         <div class="sign-up deck">
             <form action="/signup" class="suform" method="post">
                 <div class="signupheader">
@@ -50,6 +82,9 @@
                 <button type="submit" class="btn btn-primary sbutton">Sign Up</button>
             </form>
         </div>
+        <footer>
+            <div class="footer-copyright text-center py-3 footer-primary">© 2020 Copyright: Hackslash </div>
+        </footer>
 
     </div>
 
