--- a/views/main.ejs
+++ b/views/main.ejs
@@ -68,7 +68,7 @@
         </div>
 
         <!-- Hotel and Travelling Section -->
-        <div class="container-fluid second-section " id="hotel">
+        <div class="container-fluid middle" id="hotel">
             <!-- Two Card Deck -->
             <div class="row">
                 <div class="col-lg-6 hotel">
@@ -112,7 +112,7 @@
         </div>
 
         <!-- Review Section -->
-        <div class="container-fluid second-section " id="review">
+        <div class="container-fluid" id="review">
             <!-- Two Card Deck -->
             <h3>Reviews Section</h3>
             <div class="row review">
@@ -120,26 +120,29 @@
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Rahul Aggarwal</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text"> Mysore, A place where you will feel like you are in the period of ancient rulers. The soil of mysore is the proof of many phenomenon which takes place in South india.</p>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Megha</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">I had lived in Mysore from 2015 to 2016. It is a wonderful city to live in. It has cool weather through out the year. It has wide roads and I never see any traffic jams. It has many sightseeing places like Palace, chamundi
+                                temple, Brindavan garden and zoo Park.</p>
 
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Vaibhavi</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">I have visited Mysore city in summer 2019. Problem is the most cleanest city in India. To go to Mysore you can board a bus or train. There are lots of busses and trains available in Banglore city. Its just a two hour travel
+                                from banglore.</p>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Divya</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Mysore is becoming worst day by day... Everywhere there are rising in the numbers of people , who are waiting for the bakaras... Sorry I am not speaking about the business persons(taxi owners, car rentles, and so on.....) This
+                                topic is only about some people in Mysore.</p>
                         </div>
                     </div>
                 </div>
@@ -149,27 +152,26 @@
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Anisha</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Hello friends, I Am glad to share my experience by visiting to Mysore. This place was extraordinary compare to other places we went for three days and enjoy in this place.</p>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Shivani</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Mysore is a very beautiful tourist destination. It is probably the most attractive party of Karnataka.</p>
 
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Yogesh</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Mysore is a city in Karnataka.Tourists continesly visit Mysore becouse of it's beauty and the Mysore Palace.The Mugal Sulthan Tippu ruled the city before the British arrivals</p>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Kaushal</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-
+                            <p class="card-text">I have visited Mysore with my parents for seeing the places around and to say in one word I fell in love with it.</p>
                         </div>
                     </div>
                 </div>
@@ -178,7 +180,7 @@
         </div>
 
         <!-- Feedback -->
-        <div class="container-fluid second-section feedback-section" id="feedback">
+        <div class="container-fluid feedback-section" id="feedback">
             <!-- Two Card Deck -->
             <h3>Feedback Section</h3>
             <div class="row feedback ">
@@ -186,16 +188,16 @@
                     <form action="/feedback " method="POST">
                         <div class="form-group ">
                             <h5>Your Name</h5>
-                            <input type="text " class="form-control " name="userName " placeholder="Type Here ">
+                            <input type="text" class="form-control" name="Name" placeholder="Type Here ">
                         </div>
                         <div class="form-group ">
                             <h5>Email address</h5>
-                            <input type="email " name="userEmail " class="form-control " id="email " placeholder="Enter email ">
+                            <input type="email" name="Email" class="form-control " id="email" placeholder="Enter email">
                             <small class="form-text text-muted ">We'll never share your email with anyone else.</small>
                         </div>
                         <div class="form-group ">
                             <h5>Your Feedback</h5>
-                            <textarea name="feedback " onfocus="this.value='' ; " onblur="if (this.value=='' ) {this.value='Type here' ;} " required=" " cols="40 " rows="5 ">Type here</textarea>
+                            <textarea name="Feedback" onfocus="this.value='' ; " onblur="if (this.value=='' ) {this.value='Type here' ;} " required=" " cols="40 " rows="5 ">Type here</textarea>
                         </div>
                         <button type="submit " class="btn btn-primary ">Submit Feedback</button>
                     </form>
